--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,10 @@
 name: iso9660
 description: This library is a simple implementation of the iso9660 filesystem standard.
-version: 1.0.0
+version: 0.0.1
 repository: https://github.com/dahliaOS/iso9660
 
 environment:
   sdk: ^3.4.0
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
-
-dev_dependencies:
-  lints: ^4.0.0
-  test: ^1.24.0
+  path: ^1.6.4
